@@ -1,3 +1,12 @@
+2007-02-06  Albert Chu  <chu11@llnl.gov>
+
+	* src/modules/clusterlist/cerebro_clusterlist_genders_util.h,
+	src/modules/clusterlist/cerebro_clusterlist_genders_util.c
+	(cerebro_clusterlist_genders_setup): Add filename parameter.
+
+	* src/modules/clusterlist/cerebro_clusterlist_genders.c: Adjust
+	for new function call appropriately.
+	
 2006-12-21  Albert Chu  <chu11@llnl.gov>
 
 	* src/libs/wrappers/wrappers.c (wrap_select): Fix bug then could
